--- a/package.json
+++ b/package.json
@@ -10,10 +10,12 @@
     "postinstall": "nuxt prepare"
   },
   "dependencies": {
+    "@nuxt/icon": "^1.3.1",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "lucide-vue-next": "^0.378.0",
     "nuxt": "^3.11.2",
+    "nuxt-icons": "^3.2.1",
     "radix-vue": "^1.7.3",
     "shadcn-nuxt": "^0.10.4",
     "tailwind-merge": "^2.3.0",
