--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,10 @@
 # Nuxt dev/build outputs
-
+.output
 .data
 .nuxt
 .nitro
 .cache
-
+dist
 
 # Node dependencies
 node_modules
@@ -22,3 +22,5 @@ logs
 .env
 .env.*
 !.env.example
+
+actions-runner
