--- a/package.json
+++ b/package.json
@@ -26,6 +26,8 @@
     "vue-router": "^4.3.0"
   },
   "devDependencies": {
+    "@iconify-json/arcticons": "^1.1.108",
+    "@iconify-json/mdi": "^1.1.67",
     "@nuxtjs/tailwindcss": "^6.12.0",
     "nuxt": "^3.12.4",
     "typescript": "^5.4.5"
