--- a/.github/workflows/nuxtjs.yml
+++ b/.github/workflows/nuxtjs.yml
@@ -16,7 +16,7 @@ jobs:
           node-version: "20.x"
       # Pick your own package manager and build script
       - run: npm install
-      - run: npx nuxt build --preset github_pages
+      - run: npn run generate
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v1
         with:
