--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "lucide-vue-next": "^0.378.0",
     "nuxt-icons": "^3.2.1",
     "radix-vue": "^1.7.3",
+    "rimraf": "^6.0.1",
     "shadcn-nuxt": "^0.10.4",
     "tailwind-merge": "^2.3.0",
     "tailwindcss-animate": "^1.0.7",
