--- a/package.json
+++ b/package.json
@@ -12,25 +12,30 @@
   },
   "dependencies": {
     "@nuxt/icon": "^1.3.1",
+    "@radix-icons/vue": "^1.0.0",
+    "@vee-validate/zod": "^4.13.2",
+    "@vueuse/core": "^10.11.0",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "lucide-vue-next": "^0.378.0",
     "nuxt-icons": "^3.2.1",
-    "radix-vue": "^1.7.3",
+    "radix-vue": "^1.9.2",
     "rimraf": "^6.0.1",
-    "shadcn-nuxt": "^0.10.4",
-    "tailwind-merge": "^2.3.0",
+    "tailwind-merge": "^2.4.0",
     "tailwindcss-animate": "^1.0.7",
+    "vee-validate": "^4.13.2",
     "vue": "^3.4.21",
-    "vue-router": "^4.3.0"
+    "vue-router": "^4.3.0",
+    "zod": "^3.23.8"
   },
   "devDependencies": {
     "@iconify-json/arcticons": "^1.1.108",
     "@iconify-json/mdi": "^1.1.67",
     "@nuxt/image": "^1.7.0",
-    "@nuxtjs/tailwindcss": "^6.12.0",
+    "@nuxtjs/tailwindcss": "^6.12.1",
     "gh-pages": "^6.1.1",
     "nuxt": "^3.12.4",
-    "typescript": "^5.4.5"
+    "shadcn-nuxt": "^0.10.4",
+    "typescript": "^5.5.4"
   }
 }
